# algorithms

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  run-clang-format.sh  run_clang_format.sh  run_clang_tests.sh  run_gcc_mingw_32_tests.sh  run_gcc_mingw_64_tests.sh  run_gcc_tests.sh  run_tests.bat
.github/workflows/: fedora.yml  linux.yml  macos.yml  ubuntu.yml  windows.yml
Bin_search/: bin_search.cpp  bsearch.cpp
DisjointSetUnion/: dsu.hpp  test_dsu.cpp
DisjointSetUnionDS/: main.cpp  test_dsu.cpp
HeapDS/: main.cpp
PolynomialHashes/: task324053A.cpp  task324053B.cpp  task324053D.cpp
PrefSums/: 1d.cpp  2d.cpp
SortingAlgorithms/: HeapSort.hpp  InsertionSort.hpp  MSDRadixSort.hpp  MergeSort.hpp  QuickSort.hpp  SelectionSort.hpp  ShellSort.hpp  StringMergeSort.hpp  StringQuickSort.hpp  main.cpp  sorting_algos_config.hpp
TF_IDF/: Anglo_Saxon_Chronicle.txt  main.cpp  search_lib.cpp  search_lib.hpp
TF_IDF_ACTRIE/: actrie.hpp  main.cpp  search_lib.cpp  search_lib.hpp  test_tf_idf_actrie.cpp
bin_pow/: main.cpp
bstrees/: BTree.cpp  CMakeLists.txt  RBTree.cpp  RBTree.cppm  RBTreeTests.cpp  SplayTree.cpp  config_macros.hpp
comparison2kxcm/: main.cpp
fast_log2/: FastDeBruijnLog.cpp  IntrinsicLog.cpp  NearTwoPow.cpp
fenwick_tree/: ftree.cpp
geometry_classes/: circle.cpp  circle.h  line.cpp  line.h  main.cpp  point.cpp  point.h  polygon.cpp  polygon.h  ray.cpp  ray.h  segment.cpp  segment.h  vector.cpp  vector.h
graphs/BFS/: bfs.cpp
graphs/BellmanFord/: bellman_ford.hpp
graphs/DFS/: dfs.cpp
graphs/Dijkstra/: main.cpp
graphs/EdmondsMatching/: main.cpp
graphs/FloydWarshall/: min_dists.hpp
graphs/FordFulkerson/: ford_fulkerson.hpp
graphs/HungarianAlgorithm/: CMakeLists.txt  config_macros.hpp  hungarian_algo.hpp  main.cpp  run_clang_tests.sh  run_gcc_tests.sh  run_tests.bat  test_hungarian_algo.cpp
graphs/KosarajuAlgorithm/: main.cpp
graphs/MST/: kruskal_mst.hpp  prim_mst.hpp
graphs/TreeDiameter/: main.cpp
itertools/: itertools.h
k_ordinal_statistics/: main.cpp
long_int/: LongInt.cpp  integers_128_bit.hpp  math_utils.hpp
misc/: assert.hpp  config_macros.hpp  config_macros_compat.hpp  do_not_optimize_away.h  enum_flag_utils.hpp  enum_utils.hpp  get_typename.hpp  get_typename.ipp  ints_fmt.hpp  join_strings.hpp  join_strings.ipp  string_traits.hpp  string_traits.ipp  string_utils.hpp  string_utils.ipp  test_enum_flag_utils.cpp  test_enum_utils.cpp  test_get_typename.cpp  test_join_strings.cpp  test_tools.hpp
misc/tests/: test_enum_utils.cpp  test_get_typename.cpp  test_ints_fmt.cpp  test_join_strings.cpp  test_string_utils.cpp  test_strings_helper.hpp  test_tools.hpp
number_theory/: CMakeLists.txt  CNKCounter.hpp  EratostheneSieve.cpp  LongInt.cpp  LongInt.hpp  PermutationView.cpp  array_elems_factorization.cpp  bitmatrix  bitmatrix.cpp  bitmatrix.hpp  combinations.cpp  comp.cpp  comparisons.cpp  config_macros.hpp  div_k_n_fact.cpp  divs_traits_sums.cpp  eratosthene_sieve.cpp  eratosthene_sieve.hpp  fft.hpp  fibonacci_fast.cpp  fibonacci_fast.hpp  fibonacci_num.hpp  gosper_algorithm.hpp  integers_128_bit.hpp  is_prime.hpp  is_prime_bpsw.hpp  is_prime_slow.hpp  is_prime_sqrt.hpp  is_prime_sympy.hpp  is_prime_tests.cpp  jacobi_symbol.hpp  kronecker_symbol.hpp  longint.hpp  math_functions.hpp  math_utils.hpp  measure_is_prime_bpsw.cpp  permutation.cpp  primes.txt  run_clang_tests.sh  run_gcc_mingw_32_tests.sh  (+19 more)
number_theory/EratostheneSieve/: main.cpp
number_theory/bin_pow/: main.cpp
number_theory/comparison2kxcm/: main.cpp
number_theory/fast_log2/: CeiledLog2.cpp  DeBruijnLog2.cpp  FastCeiledLog2.cpp  IntrinsicLog2.cpp  LookupLog10.cpp  NearTwoPow.cpp  fastlog10.cpp
number_theory/inverse_sqrt/: main.cpp
number_theory/searching_primes/: integers_128_bit.hpp  is_prime.cpp  is_prime_slow.hpp  is_prime_sympy.cpp  is_prime_sympy.hpp  main.cpp
prefix_func/: main.cpp
range_queries/lis/: lis.cpp
range_queries/pref_sums/: 1d.cpp  2d.cpp  5d.cpp
range_queries/segment_tree/: 3088.cpp  3088.txt  3311.cpp  3311.txt  3312.cpp  3313.cpp  3313.txt  3325.cpp  3329.cpp  nonrec_segtree.cpp  segment_trees.cpp  segment_trees.hpp  segtree_tests.cpp
range_queries/sparse_table/: SparseTable.cpp  SparseTable.hpp  main.cpp
range_queries/suffix_array/: main.cpp
segment_tree/: 3311.cpp  3313.cpp  3325.txt  3329.txt
sqrt/: binsqrt.cpp
str_functions/: bmh.cpp  kmp.cpp  levenshtein_distance.hpp  pref_func.cpp  str_tools.hpp  test_levenshtein_distance.cpp  test_str_tools.cpp  z_func.cpp
str_z_p_func/: bmh.cpp  kmp.cpp  lev_dist.cpp  main.cpp  pref_func.cpp  z_func.cpp
string-switch-map/: README.md  StringMap.hpp  config_macros.hpp  usage_example.cpp
string-switch-map/tests/: test_string_switch_map.cpp
string_switch_compile_time/: CompileTimeContainers.hpp  StringMap.hpp  StringMatch.hpp  StringSwitch.hpp  main.cpp
string_switch_compile_time/bench/: main.cpp
tests/: .clang-tidy  CMakeLists.txt  CMakeTestsUtils.cmake  prepare_stage_for_tests.sh  run_clang_tests.sh  run_codechecker.sh  run_gcc_mingw_32_tests.sh  run_gcc_mingw_64_tests.sh  run_gcc_tests.sh  run_macos_clang_tests.sh  run_tests.bat  run_windows_clang_cl_tests.bat  run_windows_msvc_tests.bat  run_windows_msys2_mingw_64_tests.bat  unix_build_all_tests.sh  windows_build_all_tests.bat
tests/cppcheck/addons/: misra.py  y2038.py
tf_idf_actrie/: actrie.hpp  search_lib.cpp  search_lib.hpp  test_actrie.cpp  test_tf_idf_actrie.cpp
trie/: trie.cpp
trie_replacer/: actrie.c  actrie.h  main.c
vec_instructs/: config_macros.hpp  measure_memset_int.c  memcount.h  memset_int.h  test_memcount.c  test_memcount.cpp  test_memset_int.c  test_memset_int.cpp
